ipad header alignment issue

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -2223,7 +2223,8 @@ img {
 		background-color: red;
 	}
 	.navbar-nav {
-		width: 100% !important;
+		float: right;
+		width: 50% !important;
 		background-color: pink;
 	}
 	.navbar-nav > li {
